julia/LibCEED.jl/src/generated/libceed_bindings.jl


function CeedObjectCreate(ceed, view_function, destroy_function, obj)
    ccall((:CeedObjectCreate, libceed), Cint, (Ceed, Ptr{Cvoid}, Ptr{Cvoid}, CeedObject), ceed, view_function, destroy_function, obj)
end

function CeedObjectReference(obj)
    ccall((:CeedObjectReference, libceed), Cint, (CeedObject,), obj)
end

function CeedObjectDereference(obj)
    ccall((:CeedObjectDereference, libceed), Cint, (CeedObject,), obj)
end

function CeedObjectDestroy_Private(obj)
    ccall((:CeedObjectDestroy_Private, libceed), Cint, (CeedObject,), obj)
end

function CeedSetHostBoolArray(source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
    ccall((:CeedSetHostBoolArray, libceed), Cint, (Ptr{Bool}, CeedCopyMode, CeedSize, Ptr{Ptr{Bool}}, Ptr{Ptr{Bool}}, Ptr{Ptr{Bool}}), source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
end

function CeedSetHostCeedInt8Array(source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
    ccall((:CeedSetHostCeedInt8Array, libceed), Cint, (Ptr{CeedInt8}, CeedCopyMode, CeedSize, Ptr{Ptr{CeedInt8}}, Ptr{Ptr{CeedInt8}}, Ptr{Ptr{CeedInt8}}), source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
end

function CeedSetHostCeedIntArray(source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
    ccall((:CeedSetHostCeedIntArray, libceed), Cint, (Ptr{CeedInt}, CeedCopyMode, CeedSize, Ptr{Ptr{CeedInt}}, Ptr{Ptr{CeedInt}}, Ptr{Ptr{CeedInt}}), source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
end

function CeedSetHostCeedScalarArray(source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
    ccall((:CeedSetHostCeedScalarArray, libceed), Cint, (Ptr{CeedScalar}, CeedCopyMode, CeedSize, Ptr{Ptr{CeedScalar}}, Ptr{Ptr{CeedScalar}}, Ptr{Ptr{CeedScalar}}), source_array, copy_mode, num_values, target_array_owned, target_array_borrowed, target_array)
end

function CeedRegister(prefix, init, priority)
    ccall((:CeedRegister, libceed), Cint, (Ptr{Cchar}, Ptr{Cvoid}, Cuint), prefix, init, priority)
end

function CeedRegisterImpl(prefix, init, priority)
    ccall((:CeedRegisterImpl, libceed), Cint, (Ptr{Cchar}, Ptr{Cvoid}, Cuint), prefix, init, priority)
end

function CeedIsDebug(ceed, is_debug)
    ccall((:CeedIsDebug, libceed), Cint, (Ceed, Ptr{Bool}), ceed, is_debug)
end

function CeedGetResourceRoot(ceed, resource, delineator, resource_root)
    ccall((:CeedGetResourceRoot, libceed), Cint, (Ceed, Ptr{Cchar}, Ptr{Cchar}, Ptr{Ptr{Cchar}}), ceed, resource, delineator, resource_root)
end

function CeedGetParent(ceed, parent)
    ccall((:CeedGetParent, libceed), Cint, (Ceed, Ptr{Ceed}), ceed, parent)
end

function CeedGetDelegate(ceed, delegate)
    ccall((:CeedGetDelegate, libceed), Cint, (Ceed, Ptr{Ceed}), ceed, delegate)
end

function CeedSetDelegate(ceed, delegate)
    ccall((:CeedSetDelegate, libceed), Cint, (Ceed, Ceed), ceed, delegate)
end

function CeedGetObjectDelegate(ceed, delegate, obj_name)
    ccall((:CeedGetObjectDelegate, libceed), Cint, (Ceed, Ptr{Ceed}, Ptr{Cchar}), ceed, delegate, obj_name)
end

function CeedSetObjectDelegate(ceed, delegate, obj_name)
    ccall((:CeedSetObjectDelegate, libceed), Cint, (Ceed, Ceed, Ptr{Cchar}), ceed, delegate, obj_name)
end

function CeedGetOperatorFallbackCeed(ceed, fallback_ceed)
    ccall((:CeedGetOperatorFallbackCeed, libceed), Cint, (Ceed, Ptr{Ceed}), ceed, fallback_ceed)
end

function CeedSetOperatorFallbackCeed(ceed, fallback_ceed)
    ccall((:CeedSetOperatorFallbackCeed, libceed), Cint, (Ceed, Ceed), ceed, fallback_ceed)
end

function CeedSetDeterministic(ceed, is_deterministic)
    ccall((:CeedSetDeterministic, libceed), Cint, (Ceed, Bool), ceed, is_deterministic)
end

function CeedGetData(ceed, data)
    ccall((:CeedGetData, libceed), Cint, (Ceed, Ptr{Cvoid}), ceed, data)
end

function CeedSetData(ceed, data)
    ccall((:CeedSetData, libceed), Cint, (Ceed, Ptr{Cvoid}), ceed, data)
end

function CeedReference(ceed)
    ccall((:CeedReference, libceed), Cint, (Ceed,), ceed)
end

function CeedGetWorkVector(ceed, len, vec)
    ccall((:CeedGetWorkVector, libceed), Cint, (Ceed, CeedSize, Ptr{CeedVector}), ceed, len, vec)
end

function CeedRestoreWorkVector(ceed, vec)
    ccall((:CeedRestoreWorkVector, libceed), Cint, (Ceed, Ptr{CeedVector}), ceed, vec)
end

function CeedClearWorkVectors(ceed, min_len)
    ccall((:CeedClearWorkVectors, libceed), Cint, (Ceed, CeedSize), ceed, min_len)
end

function CeedGetWorkVectorMemoryUsage(ceed, usage_mb)
    ccall((:CeedGetWorkVectorMemoryUsage, libceed), Cint, (Ceed, Ptr{CeedScalar}), ceed, usage_mb)
end

function CeedGetJitSourceRoots(ceed, num_source_roots, jit_source_roots)
    ccall((:CeedGetJitSourceRoots, libceed), Cint, (Ceed, Ptr{CeedInt}, Ptr{Ptr{Ptr{Cchar}}}), ceed, num_source_roots, jit_source_roots)
end

function CeedGetRustSourceRoots(ceed, num_source_roots, rust_source_roots)
    ccall((:CeedGetRustSourceRoots, libceed), Cint, (Ceed, Ptr{CeedInt}, Ptr{Ptr{Ptr{Cchar}}}), ceed, num_source_roots, rust_source_roots)
end

function CeedRestoreJitSourceRoots(ceed, jit_source_roots)
    ccall((:CeedRestoreJitSourceRoots, libceed), Cint, (Ceed, Ptr{Ptr{Ptr{Cchar}}}), ceed, jit_source_roots)
end

function CeedRestoreRustSourceRoots(ceed, rust_source_roots)
    ccall((:CeedRestoreRustSourceRoots, libceed), Cint, (Ceed, Ptr{Ptr{Ptr{Cchar}}}), ceed, rust_source_roots)
end

function CeedGetJitDefines(ceed, num_defines, jit_defines)
    ccall((:CeedGetJitDefines, libceed), Cint, (Ceed, Ptr{CeedInt}, Ptr{Ptr{Ptr{Cchar}}}), ceed, num_defines, jit_defines)
end

function CeedRestoreJitDefines(ceed, jit_defines)
    ccall((:CeedRestoreJitDefines, libceed), Cint, (Ceed, Ptr{Ptr{Ptr{Cchar}}}), ceed, jit_defines)
end

function CeedVectorHasValidArray(vec, has_valid_array)
    ccall((:CeedVectorHasValidArray, libceed), Cint, (CeedVector, Ptr{Bool}), vec, has_valid_array)
end

function CeedVectorHasBorrowedArrayOfType(vec, mem_type, has_borrowed_array_of_type)
    ccall((:CeedVectorHasBorrowedArrayOfType, libceed), Cint, (CeedVector, CeedMemType, Ptr{Bool}), vec, mem_type, has_borrowed_array_of_type)
end

function CeedVectorGetState(vec, state)
    ccall((:CeedVectorGetState, libceed), Cint, (CeedVector, Ptr{UInt64}), vec, state)
end

function CeedVectorGetData(vec, data)
    ccall((:CeedVectorGetData, libceed), Cint, (CeedVector, Ptr{Cvoid}), vec, data)
end

function CeedVectorSetData(vec, data)
    ccall((:CeedVectorSetData, libceed), Cint, (CeedVector, Ptr{Cvoid}), vec, data)
end

function CeedVectorReference(vec)
    ccall((:CeedVectorReference, libceed), Cint, (CeedVector,), vec)
end

@cenum CeedRestrictionType::UInt32 begin
    CEED_RESTRICTION_STANDARD = 1
    CEED_RESTRICTION_ORIENTED = 2
    CEED_RESTRICTION_CURL_ORIENTED = 3
    CEED_RESTRICTION_STRIDED = 4
    CEED_RESTRICTION_POINTS = 5
end

function CeedElemRestrictionGetType(rstr, rstr_type)
    ccall((:CeedElemRestrictionGetType, libceed), Cint, (CeedElemRestriction, Ptr{CeedRestrictionType}), rstr, rstr_type)
end

function CeedElemRestrictionIsStrided(rstr, is_strided)
    ccall((:CeedElemRestrictionIsStrided, libceed), Cint, (CeedElemRestriction, Ptr{Bool}), rstr, is_strided)
end

function CeedElemRestrictionIsAtPoints(rstr, is_points)
    ccall((:CeedElemRestrictionIsAtPoints, libceed), Cint, (CeedElemRestriction, Ptr{Bool}), rstr, is_points)
end

function CeedElemRestrictionAtPointsAreCompatible(rstr_a, rstr_b, are_compatible)
    ccall((:CeedElemRestrictionAtPointsAreCompatible, libceed), Cint, (CeedElemRestriction, CeedElemRestriction, Ptr{Bool}), rstr_a, rstr_b, are_compatible)
end

function CeedElemRestrictionGetStrides(rstr, strides)
    ccall((:CeedElemRestrictionGetStrides, libceed), Cint, (CeedElemRestriction, Ptr{CeedInt}), rstr, strides)
end

function CeedElemRestrictionHasBackendStrides(rstr, has_backend_strides)
    ccall((:CeedElemRestrictionHasBackendStrides, libceed), Cint, (CeedElemRestriction, Ptr{Bool}), rstr, has_backend_strides)
end

function CeedElemRestrictionGetOffsets(rstr, mem_type, offsets)
    ccall((:CeedElemRestrictionGetOffsets, libceed), Cint, (CeedElemRestriction, CeedMemType, Ptr{Ptr{CeedInt}}), rstr, mem_type, offsets)
end

function CeedElemRestrictionRestoreOffsets(rstr, offsets)
    ccall((:CeedElemRestrictionRestoreOffsets, libceed), Cint, (CeedElemRestriction, Ptr{Ptr{CeedInt}}), rstr, offsets)
end

function CeedElemRestrictionGetOrientations(rstr, mem_type, orients)
    ccall((:CeedElemRestrictionGetOrientations, libceed), Cint, (CeedElemRestriction, CeedMemType, Ptr{Ptr{Bool}}), rstr, mem_type, orients)
end

function CeedElemRestrictionRestoreOrientations(rstr, orients)
    ccall((:CeedElemRestrictionRestoreOrientations, libceed), Cint, (CeedElemRestriction, Ptr{Ptr{Bool}}), rstr, orients)
end

function CeedElemRestrictionGetCurlOrientations(rstr, mem_type, curl_orients)
    ccall((:CeedElemRestrictionGetCurlOrientations, libceed), Cint, (CeedElemRestriction, CeedMemType, Ptr{Ptr{CeedInt8}}), rstr, mem_type, curl_orients)
end

function CeedElemRestrictionRestoreCurlOrientations(rstr, curl_orients)
    ccall((:CeedElemRestrictionRestoreCurlOrientations, libceed), Cint, (CeedElemRestriction, Ptr{Ptr{CeedInt8}}), rstr, curl_orients)
end

function CeedElemRestrictionGetLLayout(rstr, layout)
    ccall((:CeedElemRestrictionGetLLayout, libceed), Cint, (CeedElemRestriction, Ptr{CeedInt}), rstr, layout)
end

function CeedElemRestrictionSetLLayout(rstr, layout)
    ccall((:CeedElemRestrictionSetLLayout, libceed), Cint, (CeedElemRestriction, Ptr{CeedInt}), rstr, layout)
end

function CeedElemRestrictionGetELayout(rstr, layout)
    ccall((:CeedElemRestrictionGetELayout, libceed), Cint, (CeedElemRestriction, Ptr{CeedInt}), rstr, layout)
end

function CeedElemRestrictionSetELayout(rstr, layout)
    ccall((:CeedElemRestrictionSetELayout, libceed), Cint, (CeedElemRestriction, Ptr{CeedInt}), rstr, layout)
end

function CeedElemRestrictionGetAtPointsElementOffset(rstr, elem, elem_offset)
    ccall((:CeedElemRestrictionGetAtPointsElementOffset, libceed), Cint, (CeedElemRestriction, CeedInt, Ptr{CeedSize}), rstr, elem, elem_offset)
end

function CeedElemRestrictionSetAtPointsEVectorSize(rstr, e_size)
    ccall((:CeedElemRestrictionSetAtPointsEVectorSize, libceed), Cint, (CeedElemRestriction, CeedSize), rstr, e_size)
end

function CeedElemRestrictionGetData(rstr, data)
    ccall((:CeedElemRestrictionGetData, libceed), Cint, (CeedElemRestriction, Ptr{Cvoid}), rstr, data)
end

function CeedElemRestrictionSetData(rstr, data)
    ccall((:CeedElemRestrictionSetData, libceed), Cint, (CeedElemRestriction, Ptr{Cvoid}), rstr, data)
end

function CeedElemRestrictionReference(rstr)
    ccall((:CeedElemRestrictionReference, libceed), Cint, (CeedElemRestriction,), rstr)
end

function CeedElemRestrictionGetFlopsEstimate(rstr, t_mode, flops)
    ccall((:CeedElemRestrictionGetFlopsEstimate, libceed), Cint, (CeedElemRestriction, CeedTransposeMode, Ptr{CeedSize}), rstr, t_mode, flops)
end

@cenum CeedFESpace::UInt32 begin
    CEED_FE_SPACE_H1 = 1
    CEED_FE_SPACE_HDIV = 2
    CEED_FE_SPACE_HCURL = 3
end

function CeedBasisGetCollocatedGrad(basis, colo_grad_1d)
    ccall((:CeedBasisGetCollocatedGrad, libceed), Cint, (CeedBasis, Ptr{CeedScalar}), basis, colo_grad_1d)
end

function CeedBasisGetChebyshevInterp1D(basis, chebyshev_interp_1d)
    ccall((:CeedBasisGetChebyshevInterp1D, libceed), Cint, (CeedBasis, Ptr{CeedScalar}), basis, chebyshev_interp_1d)
end

function CeedBasisIsTensor(basis, is_tensor)
    ccall((:CeedBasisIsTensor, libceed), Cint, (CeedBasis, Ptr{Bool}), basis, is_tensor)
end

function CeedBasisIsCollocated(basis, is_collocated)
    ccall((:CeedBasisIsCollocated, libceed), Cint, (CeedBasis, Ptr{Bool}), basis, is_collocated)
end
